# bbdsl-platform

./: .env.example  .gitignore  BBDSL_IMPLEMENTATION-PLAN.md  Phase5_ind_repo_plan.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_drafts_shares.py
backend/app/: main.py
backend/app/api/v1/: auth.py  community.py  compare.py  drafts.py  export.py  registry.py  share.py  validate.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  convention.py  draft.py  namespace.py  rating.py  share.py  user.py
backend/app/services/: bbdsl_service.py  diff_service.py  registry_service.py
backend/tests/: test_export_api.py  test_registry_api.py  test_validate_ws.py
docs/: bbdsl-intro.md  deployment.md
docs/schema/: bbdsl-schema-v0.3.json
docs/spec/: BBDSL-SPEC-v0.3.md  BBDSL-SUPPLEMENT-v0.3.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/BiddingTree/: BiddingTree.tsx
frontend/src/components/CommunitySection/: CommunitySection.tsx
frontend/src/components/ConventionBrowser/: ConventionBrowser.tsx
frontend/src/lib/: api.ts  auth.tsx  bbdsl-language.ts  ws.ts
frontend/src/pages/: AuthCallback.tsx  ConventionDetail.tsx  Diff.tsx  Editor.tsx  Profile.tsx  Registry.tsx  SharedView.tsx
seed/: load_seed.py
seed/conventions/: precision.bbdsl.yaml  sayc.bbdsl.yaml  two_over_one.bbdsl.yaml
(+4 files in other folders)
