[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbdsl-platform-backend"
version = "0.1.0"
description = "BBDSL Platform Backend — Convention Registry, Online Editor & Community API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "authlib>=1.3",
    "httpx>=0.27",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "bbdsl>=0.4.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
